Mostly upgrade hollow for new petsc
Finite element support is currently disabled, and needs significant
updates for the new API.

--- a/hollow/SConscript
+++ b/hollow/SConscript
@@ -1,3 +1,3 @@
 Import('env library')
 
-library(env,'hollow',pyname='hollow_wrap')
+library(env,'hollow',pyname='hollow_wrap',skip='laplace/laplace.cpp petsc/ds.cpp'.split())
